Minor maintenance of AbstractConnection and change to virtual threads